--- a/app/styles/world.css
+++ b/app/styles/world.css
@@ -109,19 +109,14 @@ html, body {
   }
 }
 
-/* This is intended to start when its becoming night, so it quickly transitions to nighttime and stays that way before trannsitioning more slowly to day later */
-@keyframes dayToNightToDay {
-  0%, 10% {
+@keyframes dayToNight {
+  0% {
     opacity: 0; /* Day visible, night hidden */
   }
-  10%, 80% {
-    opacity: 1; /* Day hidden, night visible */
-  }
-  80%, 100% {
-    opacity: 0; /* Day visible, night hidden */
+  100% {
+    opacity: 1; /* Night fully visible */
   }
 }
-
 
 #world.sunset-transition {
   background: linear-gradient(to bottom, #87CEEB, #f0e68c)
@@ -137,5 +132,5 @@ html, body {
   background: linear-gradient(to bottom, #000045, #000000) !important;
   z-index: -1;
   opacity: 0;
-  animation: dayToNightToDay 600s ease-in-out;
+  animation: dayToNight 120s ease-in-out forwards;
 }
